# VideoMappping

./: .gitignore  CALIBRATION_ENHANCEMENT_STRATEGY.md  CMakeLists.txt  DEVELOPMENT_LOG.md  README.md  README_PERFORMANCE.md  aruco_internationalization_fix_log.md  calibration_images  camera_correction_fix_log.md  cleanup_calibration.sh  color_accessibility_optimization_log.md  current_dev_status.md  debug_log.md  development_log.md  grid_lines_optimization_log.md  internationalization_complete_fix_log.md  internationalization_final_fix_log.md  internationalization_fix_log.md  optimization_log.md  performance_optimization_log.md  ui_fixes_log.md  开发规范.md
data/: camera_calibration.xml  homography.xml  markers.xml
docs/: ArUco标记使用指南.md  dual-resolution-optimization.md  软件使用手册.md
include/: CameraCalibrator.h  HomographyMapper.h  VideoStreamer.h
src/: CameraCalibrator.cpp  HomographyMapper.cpp  VideoStreamer.cpp  main.cpp
static/: i18n.js  index.html  index_backup.html  script.js  script.js.new  script_test.js  script_with_new_layout.js  style.css  style_backup.css  styles.css  wget-log
tools/: ArUco_使用指南.md  generate_aruco_a4.py  generate_aruco_markers.py
